// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemName /> should render with props 1`] = `
<ItemName
  href="#"
  shrinkable={true}
>
  <div
    className="wrapper"
  >
    <ForwardRef(Link)
      href="#"
    >
      <a
        className="link color__brand-blue hover-color__brand-deep-blue"
        href="#"
      >
        <ForwardRef(Text)>
          <span
            className=""
          >
            <span
              className="name"
            >
              Foo Bar
            </span>
          </span>
        </ForwardRef(Text)>
      </a>
    </ForwardRef(Link)>
  </div>
</ItemName>
`;

exports[`<ItemName /> should render without props 1`] = `
<ItemName>
  <div
    className="wrapper"
  >
    <ForwardRef(Link)>
      <a
        className="link color__brand-blue hover-color__brand-deep-blue"
      >
        <ForwardRef(Text)>
          <span
            className=""
          >
            <span
              className="name"
            />
          </span>
        </ForwardRef(Text)>
      </a>
    </ForwardRef(Link)>
  </div>
</ItemName>
`;
